7. Change the items all characters get at creation time with STARTINGITEMS in your coffeemud.ini file
8. Can now COPY areas
9. LIST command now supports AREAS for admins -- choose your own columns or sortings
10.IMPORTANT: previously, mobs would never wander OUT of a room where an admin is -- now they also won't wander INTO a room where an admin is
11.Construction and Masonry skills now support building stairs to create new floors -- rooms must still be purchased.
12.Children now inheret the languages of their parents
13.Players can now sit from a sleeping position (not sure how that got missed).
14.SHOWDAMAGE flag in your coffeemud.ini file now supports SOURCE and TARGET options
15.CLANVOTE option, long supported in the codebase, is now exposed in the coffeemud.ini file
16.(Internal) System can now cache commonly used world searches.  See NOCACHE in coffeemud.ini to turn it off!
17.Bugs fixed in conventional manner.
# Build 5.7.8 Release 09/09/2012
1. Fixed the statistics bug
2. Fixed a bug with variables in Scriptable MPTITLE command
3. Fixed numerous prayers that did not respect elemental immunity/resistance
4. Arcanist Spellcrafted abilities persist over reboots
5. Children now track their number of high-level parents to which benefits are tied to, and can repick their stats and class.
# Build 5.7.9 Release 09/10/2012
1. FakeDB now supports getResultSetMetaData, making room for some sort of sql browser feature
2. CoffeeMud (actually fakedb) is now build compatible with JDK 1.7
3. Fixed a nasty bug in CMParms -- you do not want 5.7.8!
# Build 5.7.10 Release ??/??/2012
1. (Minor) ResourceOverride is now an ActiveTicker for better control over its behavior.  Also, room types bug fixed.
2. New INI entries for whitelisting over ip/login/newplayer blocks: WHITELISTIPSCONN, WHITELISTLOGINS, WHITELISTIPSNEWPLAYERS
3. Special GET case: Can now get parts of a bundle from a container -- get 2 oak from wagon will break a 2# bundle from inside in a wagon.